Removed code smell from ViewController